--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Patrick+Hand&display=swap');
 
+/*body section*/
+
 body{
   font-family: 'Patrick Hand', cursive;
 }
 
+/*nav index page starts*/
 nav.primary-navbar {
-  padding: 1rem;
+  padding: auto;
   display: flex;
   background-color: #DAF7A6;
+  border: auto;
 }
 
 nav.primary-navbar a{
@@ -15,29 +19,34 @@ nav.primary-navbar a{
     display: flex;
     list-style: none;
     text-decoration: none;
+    margin: 1rem;
 }
 
 nav.primary-navbar h1 {
    text-align: center;
    position: relative;
-   bottom: 80px;
+   bottom: 90px;
+   margin: -2rem;
 
 }
 
 nav.primary-navbar p {
    text-align: center;
    position: relative;
-   bottom: 85px;
+   bottom: 65px;
    flex direction: column;
-   Padding: 0;
+   Padding: -3rem;
+   margin: -2.3rem;
 }
 nav.primary-navbar div.brand a img {
     max-width:15%;
     height:auto;    
-    padding: 0;
+    padding: -5rem;
 
 }
+/*nav index page ends*/
 
+/*hero index page*/
 
 Section.hero {
     width: 100vw;
@@ -60,25 +69,30 @@ section.hero ul.nav-tabs {
     padding: 0;
     text-decoration: none;
 }
+
 section.hero ul.nav-tabs li a {
     color:  black;
     display: flex;
     list-style: none;
     padding: 2rem 5.85rem;
     text-decoration: none;
+    margin:-2rem
 
 }
 
+/*hero index ends*/
+
+/*footer index page*/
 
 footer.primary-footer {
   padding: 2rem;
   display: flex;
+  background-color: #DAF7A6
 }
 
 footer.primary-footer div.logo a img { 
     display: inline-block;
     height:6rem;
-
 }
 
 footer.primary-footer ul.socialnav {
@@ -90,8 +104,8 @@ footer.primary-footer ul.socialnav {
     padding: 0;
     margin: 2rem;
     text-decoration: none;
-
 }
+
 footer.primary-footer ul.socialnav li a {
     color:  black;
     display: flex;
@@ -99,33 +113,77 @@ footer.primary-footer ul.socialnav li a {
     padding: 2rem 5.85rem;
     text-decoration: none;
 }
+/*footer index page*/ 
 
-Section.hero {
-    width: 100vw;
-    height: 100vh;
+/*products page*/
+
 }
 
-section.hero-products div {
-   color: black;
-   text-align: center;
-   position: center;
-   text-decoration: none;
+}
+div.product-inserts-description h2 {
+font-style: italic;
+font-size: 23px;
+} 
 
+div.product-inserts-description p {
+color: red;
 }
 
 section.hero-products div img{
+    position: center;
     display: inline-block;
     height:6rem;
     margin: 2rem;
     text-decoration: none;
     color: black;
 }
+  
+section.hero div.product-inserts p {
+color: black;
+text-decoration: none;
+font-size: 40px;
 
-section.hero-products ul.nav-tabs-products {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    text-decoration: none;
+}
+
+
+
+
+
+/*products page ends*/
+
+/*about us page starts*/
+
+div.hero-aboutus img {
+    z-index: ;
+    border-radius: 8px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+ 
+div.hero-aboutus h2 {
+    font color: black;
+    font-size: 60px;
+
+}
+
+div.hero-aboutus p {
+    font color: black;
+    font-size: 30px;
+}
+
+footer.primary-footer-aboutus {
+  padding: 2rem;
+  display: flex;
+  background-color: #DAF7A6
+}
+
+footer.primary-footer-aboutus div.logo a img { 
+    display: inline-block;
+    height:6rem;
+}
+
+footer.primary-footeraboutus ul.socialnav {
     color:  black;
     display: flex;
     list-style: none;
@@ -133,27 +191,14 @@ section.hero-products ul.nav-tabs-products {
     position: relative;
     padding: 0;
     margin: 2rem;
+    text-decoration: none;
 
 }
-section.hero-products ul.nav-tabs-products li a {
+footer.primary-footer-aboutus ul.socialnav li a {
     color:  black;
     display: flex;
     list-style: none;
     padding: 2rem 5.85rem;
     text-decoration: none;
 }
-
-section.hero-products a img p {
- width:200px;
-  text-align:center;
-  display:block;
-  background-color: transparent;
-  border: 1px solid transparent;
-  margin-right: 10px;
-  margin-bottom: 1px;
-  float:left;
-  color: black;
-}
-
-
 
